--- a/CO² - Footprinting/CSS.css
+++ b/CO² - Footprinting/CSS.css
@@ -4,6 +4,13 @@ body {
     padding: 20px;
     background-color: #ffffff;
     text-align: center;
+    img {
+        position: absolute;
+        width: 20%;
+        margin: 0 20px 0 0;
+        right: 0;
+    }
+
 }
 
 h1 {
@@ -33,3 +40,4 @@ li {
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
