--- a/CO² - Footprinting/style.css
+++ b/CO² - Footprinting/style.css
@@ -43,49 +43,72 @@ li {
 }
 
 .chart-heading {
-    font-family: "Rubik", sans-serif;
-    color: #023047;
-    text-transform: uppercase;
-    font-size: 24px;
-    text-align: center;
-  }
-  
-  .chart-container {
-    width: 200px;
-  }
-  
-  .programming-stats {
-    font-family: "Rubik", sans-serif;
-    display: flex;
-    align-items: center;
-    gap: 24px;
-    margin: 0 auto;
-    width: fit-content;
-    box-shadow: 0 4px 12px -2px rgba(0, 0, 0, 0.3);
-    border-radius: 20px;
-    padding: 8px 32px;
-    color: #023047;
-    transition: all 400ms ease;
-  }
-  
-  .programming-stats:hover {
-    transform: scale(1.02);
-    box-shadow: 0 4px 16px -7px rgba(0, 0, 0, 0.3);
-  }
-  
-  .programming-stats .details ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .programming-stats .details ul li {
-    font-size: 16px;
-    margin: 12px 0;
-    text-transform: uppercase;
-  }
-  
-  .programming-stats .details .percentage {
-    font-weight: 700;
-    color: #e63946;
-  }
+  font-family: "Rubik", sans-serif;
+  color: #023047;
+  text-transform: uppercase;
+  font-size: 24px;
+  text-align: center;
+}
+
+.chart-container {
+  width: 200px;
+}
+
+.programming-stats {
+  font-family: "Rubik", sans-serif;
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  margin: 0 auto;
+  width: fit-content;
+  box-shadow: 0 4px 12px -2px rgba(0, 0, 0, 0.3);
+  border-radius: 20px;
+  padding: 8px 32px;
+  color: #023047;
+  transition: all 400ms ease;
+}
+
+.programming-stats:hover {
+  transform: scale(1.02);
+  box-shadow: 0 4px 16px -7px rgba(0, 0, 0, 0.3);
+}
+
+.programming-stats .details ul {
+  list-style: none;
+  padding: 0;
+}
+
+.programming-stats .details ul li {
+  font-size: 16px;
+  margin: 12px 0;
+  text-transform: uppercase;
+}
+
+.programming-stats .details .percentage {
+  font-weight: 700;
+  color: #e63946;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-top: 20px;
+}
+
+th, td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: center;
+}
+
+th {
+  background-color: #f2f2f2;
+  height: 40px;
+  font-size: 16px;
+}
+
+tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
 
