--- a/CO² - Footprinting/style.css
+++ b/CO² - Footprinting/style.css
@@ -42,6 +42,13 @@ li {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.footer {
+    text-align: center;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
+
 .chart-heading {
   font-family: "Rubik", sans-serif;
   color: #023047;
