--- a/CO² - Footprinting/style.css
+++ b/CO² - Footprinting/style.css
@@ -1,52 +1,64 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 20px;
-    background-color: #ffffff;
-    text-align: center;
-   
-    img {
-        position: absolute;
-        width: 20%;
-        margin: 0 20px 0 0;
-        right: 0;
-    }
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 20px;
+  background-color: #ffffff;
+  text-align: center;
+}
 
+body img {
+  position: absolute;
+  width: 20%;
+  margin: 0 20px 0 0;
+  right: 0;
 }
 
 h1 {
-    color: #000000;
+  color: #000000;
 }
 
 p {
-    color: #000000;
+  color: #000000;
 }
 
 #searchInput {
-    padding: 10px;
-    width: 300px;
-    margin-top: 20px;
-    font-size: 1em;
+  padding: 10px;
+  width: 300px;
+  margin-top: 20px;
+  font-size: 1em;
 }
 
 #countryList {
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 li {
-    background-color: #ffffff;
-    padding: 10px;
-    margin: 5px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+  padding: 10px;
+  margin: 5px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+#companyList {
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  background-color: #ffffff;
+  padding: 10px;
+  margin: 5px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .footer {
-    text-align: center;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
+  text-align: center;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
 }
 
 .chart-heading {
@@ -96,26 +108,6 @@ li {
   color: #e63946;
 }
 
-table {
-  border-collapse: collapse;
-  width: 100%;
-  margin-top: 20px;
-}
 
-th, td {
-  border: 1px solid #ddd;
-  padding: 8px;
-  text-align: center;
-}
-
-th {
-  background-color: #f2f2f2;
-  height: 40px;
-  font-size: 16px;
-}
-
-tr:nth-child(even) {
-  background-color: #f9f9f9;
-}
 
 
