--- a/CO² - Footprinting/style.css
+++ b/CO² - Footprinting/style.css
@@ -1,69 +1,122 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 20px;
-  background-color: #ffffff;
+h1 {
+  font-family: "Rubik", sans-serif;
+  color: #000;
+  font-size: 30px;
   text-align: center;
 }
 
-body img {
-  position: absolute;
-  width: 20%;
-  margin: 0 20px 0 0;
-  right: 0;
+h2 {
+  font-family: "Rubik", sans-serif;
+  color: #000;
+  font-size: 20px;
+  text-align: center;
+  gap: 25px;
 }
 
-h1 {
-  color: #000000;
+h3 {
+  font-family: "Rubik", sans-serif;
+  color: #000;
+  font-size: 20px;
+  text-align: center;
+  gap: 15px;
 }
 
 p {
-  color: #000000;
+  font-family: "Rubik", sans-serif;
+  color: #000;
+  font-size: 15px;
+  text-align: center;
+  line-height: 1.5;
 }
 
+.aboutUs {
+  font-family: "Rubik", sans-serif;
+  text-align: justify; /* Blocksatz */
+  text-align: left; /* Letzte Zeile zentrieren (falls unterstützt) */
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: center;
+  height: 50vh; /* 100% der Bildschirmhöhe */
+  padding: 0 40px; /*Abstand links und rechts */
+  margin: 0; /* Entferne den standardmäßigen Seitenabstand des <body>-Elements */
+}
+
+/*Suchleiste*/
 #searchInput {
-  padding: 10px;
-  width: 300px;
-  margin-top: 20px;
-  font-size: 1em;
+  font-family: "Rubik", sans-serif;
+  text-align: center;
+  padding: 15px; /* Füge zusätzlichen Innenabstand hinzu */
+  width: 300px; /* Passe die Breite nach Bedarf an */
+  height: 40px; /* Passe die Höhe nach Bedarf an */
+  font-size: 20px; /* Passe die Schriftgröße nach Bedarf an */
+  margin: 0 auto;
+  display: block;
+  
 }
 
+/*countryList - Länder*/
 #countryList {
+  font-family: "Rubik", sans-serif;
   list-style: none;
   padding: 0;
+  text-align: center;
+  font-size: 20px;
+  line-height: 2.5;
 }
 
-li {
-  background-color: #ffffff;
-  padding: 10px;
-  margin: 5px;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
+/*companyList - Unternehmen*/
 #companyList {
+  font-family: "Rubik", sans-serif;
   list-style: none;
   padding: 0;
+  text-align: center;
+  font-size: 20px;
+  line-height: 2.5;
 }
 
-li {
-  background-color: #ffffff;
-  padding: 10px;
-  margin: 5px;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+/*Tabelle - Statistik*/
+table {
+  font-family: "Rubik", sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
 }
 
 .footer {
+  font-family: "Rubik", sans-serif;
   text-align: center;
-  position: fixed;
-  width: 100%;
+  position:fixed;
   bottom: 0;
+  left: 0;
+  width: 100%;
+  margin: 0 auto 20xp;
+
 }
 
+nav{
+  font-family: "Rubik", sans-serif;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+
+}
+
+/* Doughnut Diagramme*/
 .chart-heading {
   font-family: "Rubik", sans-serif;
-  color: #023047;
+  color: #000000;
   text-transform: uppercase;
   font-size: 24px;
   text-align: center;
@@ -78,7 +131,7 @@ li {
   display: flex;
   align-items: center;
   gap: 24px;
-  margin: 0 auto;
+  margin: 0 auto 20px;
   width: fit-content;
   box-shadow: 0 4px 12px -2px rgba(0, 0, 0, 0.3);
   border-radius: 20px;
@@ -107,7 +160,3 @@ li {
   font-weight: 700;
   color: #e63946;
 }
-
-
-
-
