--- a/CO² - Footprinting/style.css
+++ b/CO² - Footprinting/style.css
@@ -51,6 +51,8 @@ p {
   height: 40px; /* Passe die Höhe nach Bedarf an */
   font-size: 20px; /* Passe die Schriftgröße nach Bedarf an */
   margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
   display: block;
   
 }
@@ -80,6 +82,7 @@ table {
   font-family: "Rubik", sans-serif;
   border-collapse: collapse;
   width: 100%;
+  margin-bottom: 50px;
 }
 
 td, th {
@@ -95,22 +98,31 @@ tr:nth-child(even) {
 .footer {
   font-family: "Rubik", sans-serif;
   text-align: center;
-  position:fixed;
+  position: fixed;
+  color: #000;
+  font-size: 20px;
   bottom: 0;
   left: 0;
   width: 100%;
-  margin: 0 auto 20xp;
-
+  margin-top: 15%;
+  background-color: #f8f9fa; /* Hintergrundfarbe, wenn gewünscht */
 }
 
 nav{
   font-family: "Rubik", sans-serif;
-  text-align: center;
-  position: absolute;
-  bottom: 0;
+  display: flex;
+  justify-content: center; /* Änderung: Zentriere horizontal */
+  align-items: center; /* Änderung: Zentriere vertikal */
+  position: fixed; /* Hinzufügung: Fixiere die Navbar am Bildschirm */
+  top: 0; /* Hinzufügung: Positioniere die Navbar oben */
   left: 0;
   width: 100%;
+  height: 100px; /* Hinzufügung: Festlegen der Höhe der Navbar */
+  background-color: #333; /* Hinzufügung: Beispiel-Hintergrundfarbe */
+}
 
+.navbar-brand {
+  width: 20%;
 }
 
 /* Doughnut Diagramme*/
@@ -136,7 +148,7 @@ nav{
   box-shadow: 0 4px 12px -2px rgba(0, 0, 0, 0.3);
   border-radius: 20px;
   padding: 8px 32px;
-  color: #023047;
+  color: #000000;
   transition: all 400ms ease;
 }
 
