--- a/CO² - Footprinting/style.css
+++ b/CO² - Footprinting/style.css
@@ -29,6 +29,16 @@ p {
   line-height: 1.5;
 }
 
+nav{
+  font-family: "Rubik", sans-serif;
+  display: flex;
+  top: 0; /* Hinzufügung: Positioniere die Navbar oben */
+  left: 0;
+  width: 100%;
+  height: 100px; /* Hinzufügung: Festlegen der Höhe der Navbar */
+  background-color: #333; /* Hinzufügung: Beispiel-Hintergrundfarbe */
+}
+
 .aboutUs {
   font-family: "Rubik", sans-serif;
   text-align: justify; /* Blocksatz */
@@ -95,36 +105,6 @@ tr:nth-child(even) {
   background-color: #dddddd;
 }
 
-.footer {
-  font-family: "Rubik", sans-serif;
-  text-align: center;
-  position: fixed;
-  color: #000;
-  font-size: 20px;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  margin-top: 15%;
-  background-color: #f8f9fa; /* Hintergrundfarbe, wenn gewünscht */
-}
-
-nav{
-  font-family: "Rubik", sans-serif;
-  display: flex;
-  justify-content: center; /* Änderung: Zentriere horizontal */
-  align-items: center; /* Änderung: Zentriere vertikal */
-  position: fixed; /* Hinzufügung: Fixiere die Navbar am Bildschirm */
-  top: 0; /* Hinzufügung: Positioniere die Navbar oben */
-  left: 0;
-  width: 100%;
-  height: 100px; /* Hinzufügung: Festlegen der Höhe der Navbar */
-  background-color: #333; /* Hinzufügung: Beispiel-Hintergrundfarbe */
-}
-
-.navbar-brand {
-  width: 20%;
-}
-
 /* Doughnut Diagramme*/
 .chart-heading {
   font-family: "Rubik", sans-serif;
@@ -171,4 +151,17 @@ nav{
 .programming-stats .details .percentage {
   font-weight: 700;
   color: #e63946;
+}
+
+.footer {
+  font-family: "Rubik", sans-serif;
+  text-align: center;
+  position: fixed;
+  color: #000;
+  font-size: 20px;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  margin-top: 15%;
+  background-color: #f8f9fa; 
 }
